# python_template

./: .cursorrules  .gitignore  README.md  pr_downloader.sh  project_setup.sh  pyproject.toml  requirements.txt
