[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_name"
version = "0.1"
authors = [
    {name = "Jeff Coggshall", email = "thenextlocalminima@gmail.com"},
]
description = "A brief description of your project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/voxmenthe/repo_name"
"Bug Tracker" = "https://github.com/voxmenthe/repo_name/issues"

[project.dependencies]